# MyCAD

./: BaseFigure.cpp  BaseFigure.h  BezierC0_2.cpp  BezierC0_2.h  BezierC2_2.cpp  BezierC2_2.h  BezierInt2.cpp  BezierInt2.h  BicubicPatch2.cpp  BicubicPatch2.h  Camera.cpp  Camera.h  ClassDiagram.cd  ComplexCpFigure.cpp  ComplexCpFigure.h  ComplexFigure.cpp  ComplexFigure.h  ControlPointsFigure.cpp  ControlPointsFigure.h  Cursor2.cpp  Cursor2.h  EBO.cpp  EBO.h  Graph.cpp  Graph.h  Grid2.cpp  Grid2.h  MKMG_CAD.sln  MKMG_CAD.vcxproj  MKMG_CAD.vcxproj.filters  MKMG_P2_torus_mesh.sln  MKMG_P2_torus_mesh.vcxproj  MKMG_P2_torus_mesh.vcxproj.filters  MyCAD.sln  MyCAD.vcxproj  MyCAD.vcxproj.filters  PivotableFigure.cpp  PivotableFigure.h  Point2.cpp  Point2.h  (+53 more)
Classes/: Camera.cpp  Camera.h  EBO.cpp  Graph.cpp  Graph.h  Intersection.cpp  Intersection.h  IntersectionHelpers.cpp  IntersectionHelpers.h  Shader.cpp  Shader.h  bezierC0.cpp  bezierC0.h  bezierC2.cpp  bezierC2.h  bezierInt.cpp  bezierInt.h  bicubicPatch.cpp  bicubicPatch.h  cursor.cpp  cursor.h  figure.cpp  figure.h  gregoryPatch.cpp  gregoryPatch.h  grid.cpp  grid.h  helpers.cpp  helpers.h  point.cpp  point.h  polyline.cpp  polyline.h  surfaceC0.cpp  surfaceC0.h  surfaceC2.cpp  surfaceC2.h  torus.cpp  torus.h
Scenes/: big-model-v1.json  big-model-v2-plane.json  big-model-v3-plane.json  big-model-v3.json  gregory_simple.json  gregory_test_2024.json  itersectionsFull.json  model.json  switch_axis.py
Serializer/source/: CMakeLists.txt  Serializer.vcxproj
Serializer/source/Models/: SceneObject.h
Shaders/: default.frag  default.vert  tessellation.tesc  tessellation.tese  tessellation.vert  tessellationSurface.tese
(+1 files in other folders)
